<resources>
    <string name="app_name">infor[me]</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_sign_in_up">SignInUpActivity</string>
    <string name="signin_button_text">sign in</string>
    <string name="signup_button_text">Sign Up</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name_hint">first name</string>
    <string name="username_hint">username</string>
    <string name="tagline">Stay informed.</string>
    <string name="password_hint">password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="last_name_hint">last name</string>
    <string name="sign_up_username_hint">\@username</string>
    <string name="email_hint">email address</string>
    <string name="sign_up_username_warning">This can\'t be changed!</string>
    <string name="onboaring_to_signup_animation">onboarding_logo_and_title_to_signupin</string>
    <string name="post_comment_button">Comment</string>
    <string name="post_share_button">Share</string>
    <string name="add_comment_dialog_subtext">You are about to comment on this post.</string>
    <string name="sharing_post">Check out this announcement by %1$s: %2$s</string>
    <string name="send_to">Share this post</string>
    <string name="more_activity_selected">More</string>
    <string name="search_widget_pressed">Search</string>
    <string name="title_activity_more">MoreActivity</string>


    <string name="more_report_bug">Report a Bug</string>
    <string name="more_review_app">Review App on Play Store</string>
    <string name="more_sign_out">Sign Out</string>
    <string-array name="report_bug_emails">
        <item>hello@mindbend.io</item>
        <item>akshay@mindbend.io</item>
        <item>aditya@mindbend.io</item>
        <item>avik@mindbend.io</item>
    </string-array>
    <string name="report_bug_email_subject">I found a bug!</string>
    <string name="report_bug_email_text">Please detail your bug here...</string>
    <string name="back_button">Back</string>
    <string name="reset_password_button_text">Reset Password</string>
    <string name="reset_password_dialog_text">Check your email for a link to reset your password</string>
    <string name="reset_password_dialog_bad_email">Please enter a valid email address!</string>
    <string name="reset_password_dialog_unused_email">This email address has not been used to sign up for infor[me]</string>
    <string name="forgot_password_email_sent">Email Sent</string>
    <string name="forgot_password_invalid_email">Invalid Email</string>
    <string name="format_new_org_announcment">New %1$s Announcement</string>
    <string name="format_view_children">View %1$s</string>
    <string name="format_add_child_org">Add New %1$s</string>
    <string name="format_view_child_pending_posts">View %1$s Pending Posts</string>
    <string name="format_view_org_followers">View %1$s Followers</string>
    <string name="format_view_org_admins">View %1$s Admins</string>
    <string name="format_view_org_pending_followers">View %1$s Pending Followers</string>
    <string name="format_change_org_photo">Change %1$s Profile Photo</string>
    <string name="format_change_org_cover_photo">Change %1$s Cover Photo</string>
    <string name="format_all_org_announcements">All %1$s Announcements</string>
    <string name="new_announce_Title">Title</string>
    <string name="new_announce_Body">Body</string>
    <string name="new_announce_Image">Image</string>
    <string name="new_announce_Start_Date">Start</string>
    <string name="new_announce_End_Date">End</string>
    <string name="new_announce_Allow_Comments">Allow Comments</string>
    <string name="format_new_announce_Notify">Notify %1$s</string>
    <string name="format_Org_NAME">%1$s</string>
    <string name="new_org_Name">Name</string>
    <string name="new_org_Handle">Handle</string>
    <string name="new_org_type">Organization Type</string>
    <string name="private_org">Private</string>
    <string name="public_org">Public</string>
    <string name="new_org_access_code">Access Code</string>
    <string name="newO_access_code_explanation">Users will require an access code to follow your private organization. If you leave this blank, users will then have to send a follow request that will have be approved in order for them to view any information about your organization.</string>
    <string name="format_tabbed_activity_toolbar_text">Infor[%1$s]</string>
    <string name="title_activity_searchable">Add Admins</string>
    <string name="searchable_activity_toggle_text">Search within parent organization</string>
    <string name="discover_search_hint">Search for organizations...</string>
    <string name="announcement_approved">Approved</string>
    <string name="announcement_declined">Declined - Why?</string>
    <string name="announcement_pending">Pending</string>
    <string name="incorrect_login_credentials">Incorrect username or password.</string>

    <string-array
        name="profile_edit_org_dialog_options">
        <item>Modify</item>
        <item>View All Members</item>
        <item>View Announcements</item>
    </string-array>

    <string-array
        name="profile_edit_user_dialog_options">
        <item>Change Profile Photo</item>
        <item>Change Cover Photo</item>
        <item>Update Description</item>
    </string-array>

    <string name="title_activity_signup_select_parent_org">SignupSelectParentOrgActivity</string>
    <string name="user_default_description">Interested in work and play.</string>
    <string name="login_user_dialog_title">Enter password to continue</string>
    <string name="login_dialog_button_text">Login</string>
    <string name="empty_comment_message">Cannot post empty comment.</string>
    <string name="no_more_posts_message">No more posts to load</string>
    <string name="no_more_users_message">No more users to load</string>
    <string name="no_more_comments_message">No more comments</string>
    <string name="follow_request_already_sent">Follow request already sent.</string>
    <string name="follow_request_already_sent_dialog_detailed_message">You must wait for administrators of this organization to accept your request before you can become a follower.</string>
    <string name="rejected_resend_follow_request_dialog_title">Resend follow request?</string>
    <string name="rejected_resend_follow_request_dialog_message">You were previously rejected from following this organization. Do you want to resend a follow request?</string>
    <string name="enter_access_code_for_private_org_message">Enter access code here.</string>
    <string name="unfollow_org_title">Unfollow organization?</string>
    <string name="format_unfollow_org_message">You are currently following %1$s. Do you want to unfollow this organization?</string>
    <string name="org_profile_image">Profile Photo</string>
    <string name="org_cover_image">Cover Photo</string>
    <string name="could_not_upload_org_photo">Could not update organization photo</string>
    <string name="succes_updated_org_photo">Successfully updated organization photo</string>
    <string name="error_getting_discover_orgs">Could not get Discover organizations</string>
    <string name="error_loading_org_members">Could not get followers of organization</string>
    <string name="admin_main_modify_org">Modify organization</string>
    <string name="new_announce_Priority">Priority</string>
    <string name="newA_priority_low">Low</string>
    <string name="newA_priority_medium">Medium</string>
    <string name="newA_priority_high">High</string>
    <string name="format_added_user_as_admin_success_message">Added %1$s as admin</string>
    <string name="initial_admin">Initial Admin</string>

    <string name="error_creating_org_message">Could not create organization</string>
    <string name="new_org_description">Description</string>
    <string name="access_code_length_message">Your access code must be 4 digits long!</string>
    <string name="create_private_org_without_access_code_message">If your private organization does not have an access code, any user will be able to submit a follow request to your administrators. Is this okay?</string>
    <string name="new_org_approval_required">Post Approval Required?</string>
    <string name="error_searching_orgs">Could not search for organizations</string>

    <string name="approve_button_text">APPROVE</string>
    <string name="decline_button_text">DECLINE</string>
    <string name="no_more_posts_approve_message">No more posts to approve!</string>
    <string name="declining_post_dialogbox_title">Declining Post</string>
    <string name="access_code_dialog_title">Access Code Required</string>
    <string name="declining_post_dialogbox_input_prompt">Briefly explain why you are declining this post</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="title_activity_sign_up_orgs">SignUpOrgsActivity</string>
    <string name="back_button_text">BACK</string>
    <string name="delete_post_dialog_title">Delete post?</string>
    <string name="delete_post_dialog_text">Are you sure you want to delete this post?</string>
    <string name="yes_button_text">YES</string>
    <string name="no_network_connection">No network connection</string>
    <string name="no_comments">No comments for this post.</string>
    <string name="updating_org_photo_loading_dialog_message">Updating photo</string>
    <string name="updating_follow_state_dialog_message">Updating follow state...</string>
    <string name="updating_profile_dialog_message">Updating profile...</string>
    <string name="following_orgs_signup_dialog_message">Following selected organizations...</string>
    <string name="sign_up_new_user_dialog_message">Signing up user...</string>
    <string name="signout_dialog_message">Signing you out...</string>
    <string name="sign_in_dialog_message">Signing you in...</string>
    <string name="profile_view_members_button">Members</string>
    <string name="profile_view_children_button">Child Organizations</string>
    <string name="posting_new_announcement_message">Posting Announcement...</string>
    <string name="modify_existing_org_message">Updating organization...</string>
    <string name="create_new_org_message">Creating organization...</string>
    <string name="app_version_tag">Closed Beta</string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="signup_agreement_text">By signing up, you are agreeing to the terms and conditions of infor[me]. If you wish to view them, click here.</string>
    <string name="delete_admin_title">Delete Admin?</string>
    <string name="format_delete_admin">Do you want to remove %1$s as an admin?</string>
    <string name="remove_admin_loading_message">Removing admin...</string>
    <string name="remove_follower_loading_message">Do you want to remove this follower from your organization?</string>
    <string name="delete_follower_title">Remove this follower?</string>
    <string name="format_delete_follower">Are you sure you want to remove %1$s from your organization?</string>
    <string name="today_date_inappropriate_title">Inappropriate Date</string>
    <string name="today_date_inappropriate_message">You can not view announcements in the future.</string>
    <string name="title_activity_terms_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_URL">http://mindbend.io/informe_terms_conditions.html</string>

</resources>
