<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/login_user_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/sign_up_username_hint"
            android:id="@+id/login_dialog_username"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/login_dialog_password"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_dialog_button"
        android:layout_gravity="right"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/login_dialog_button_text"/>

</LinearLayout>