<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".OnboardingActivity">


    <LinearLayout
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/app_logo"
            android:src="@drawable/ic_templogo"
            android:tint="@android:color/black"
            android:layout_width="@dimen/app_logo_size"
            android:layout_height="@dimen/app_logo_size"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="@dimen/app_name_size"
            android:text="@string/app_name"/>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/onboarding_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </HorizontalScrollView>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textColor="@android:color/white"
            android:layout_width="@dimen/signinup_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_button_onboarding"
            android:backgroundTint="@color/accent"
            android:text="@string/signup_button_text"/>
        <View
            android:layout_width="@dimen/signinup_button_spacing"
            android:layout_height="0dp"/>
        <Button
            android:textColor="@color/accent"
            android:backgroundTint="@color/text_tertiary"
            android:layout_width="@dimen/signinup_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button_onboarding"
            android:text="@string/signin_button_text"/>
    </LinearLayout>

</RelativeLayout>
