<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/post"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="@dimen/card_inner_margin"
            android:layout_marginLeft="@dimen/card_inner_margin"
            android:layout_marginRight="@dimen/card_inner_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_club_image"
                android:layout_width="@dimen/circle_avatar_size"
                android:layout_height="@dimen/circle_avatar_size"
                android:src="@color/primary" />

            <TextView
                android:id="@+id/post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/post_club_image"
                android:layout_marginLeft="@dimen/post_title_margin"
                android:text="Synth polaroid bitter."
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/post_club_image"
                android:layout_marginLeft="@dimen/post_title_margin"
                android:text="2hrs"
                android:id="@+id/post_time"
                android:textColor="@color/text_tertiary" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/post_image_attached"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@color/primary"/>

        <TextView
            android:id="@+id/post_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/card_inner_margin"
            android:layout_marginRight="@dimen/card_inner_margin"
            android:text="Located two hours south of Sydney in the Southern Highlands of New South Wales, ..."
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_primary"
            android:lineSpacingExtra="@dimen/post_description_line_spacing"/>

        <View
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/announcements_state_TV"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/announcement_approved"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/post_comment_button"
                android:textColor="@color/primary"
                android:id="@+id/post_comment_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/post_share_button"
                android:textColor="@color/primary"
                android:id="@+id/post_share_button"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post_club_username"
                android:text="Library"
                android:layout_marginRight="@dimen/card_inner_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>